--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* styles.css or index.css */
+@import url('https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 /* UserHome.css */
 @keyframes fadeInLeft {
   0% {
